Atualizacao no restClient