@@ -4,6 +4,7 @@ import com.frontend.ProjetoFinalTCC_frontend.model.VeiculoDTO;
 import com.frontend.ProjetoFinalTCC_frontend.model.VeiculoDTO.StatusVeiculo;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestClient;
 
 import java.util.Arrays;
 import java.util.List;
@@ -11,37 +12,64 @@ import java.util.List;
 @Service
 public class VeiculoService {
 
+    private final RestClient restClient;
+
     @Autowired
-    private ApiService apiService;
+    public VeiculoService(ApiService apiService) {
+        this.restClient = RestClient.builder()
+                .baseUrl(apiService.getBaseUrl())
+                .build();
+    }
 
     public void cadastrar(VeiculoDTO veiculo) {
         if (veiculo.getPlaca() == null || veiculo.getPlaca().trim().isEmpty()) {
             throw new IllegalArgumentException("A placa do veículo não pode estar vazia.");
         }
 
-        String url = apiService.getBaseUrl() + "/veiculos/cadastrar";
-        apiService.getRestTemplate().postForObject(url, veiculo, String.class);
+        restClient.post()
+                .uri("/veiculos/cadastrar")
+                .body(veiculo)
+                .retrieve()
+                .toBodilessEntity();
     }
 
     public List<VeiculoDTO> listarTodos() {
-        String url = apiService.getBaseUrl() + "/veiculos/listar";
-        VeiculoDTO[] veiculos = apiService.getRestTemplate().getForObject(url, VeiculoDTO[].class);
-        
-        return Arrays.asList(veiculos != null ? veiculos : new VeiculoDTO[0]);
+        VeiculoDTO[] veiculos = restClient.get()
+                .uri("/veiculos/listar")
+                .retrieve()
+                .body(VeiculoDTO[].class);
+
+        return veiculos != null ? Arrays.asList(veiculos) : List.of();
     }
 
     public VeiculoDTO buscarPorId(Long id) {
-        String url = apiService.getBaseUrl() + "/veiculos/" + id;
-        return apiService.getRestTemplate().getForObject(url, VeiculoDTO.class);
+        return restClient.get()
+                .uri("/veiculos/{id}", id)
+                .retrieve()
+                .body(VeiculoDTO.class);
+    }
+
+    public void editarVeiculo(VeiculoDTO veiculo) {
+        if (veiculo.getIdVeiculo() == null) {
+            throw new IllegalArgumentException("ID do veículo inválido para atualização.");
+        }
+
+        restClient.put()
+                .uri("/veiculos/atualizar")
+                .body(veiculo)
+                .retrieve()
+                .toBodilessEntity();
     }
 
     public void alterarStatus(Long idVeiculo, StatusVeiculo status) {
-        String url = apiService.getBaseUrl() + "/veiculos/status";
-        
         VeiculoDTO dto = new VeiculoDTO();
         dto.setIdVeiculo(idVeiculo);
         dto.setStatus(status);
 
-        apiService.getRestTemplate().put(url, dto);
+        restClient.put()
+                .uri("/veiculos/status")
+                .body(dto)
+                .retrieve()
+                .toBodilessEntity();
     }
 }
